--- a/webhook/package.json
+++ b/webhook/package.json
@@ -1,12 +1,19 @@
 {
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "dev": "sls offline start",
     "logs": "sls logs -t -f handler",
     "build": "sls package",
     "deploy": "sls deploy -v"
   },
+  "dependencies": {
+    "crypto": "^1.0.1"
+  },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.40",
+    "prettier": "^1.19.1",
     "serverless": "^1.61.3",
     "serverless-offline": "^5.12.1",
     "serverless-plugin-typescript": "^1.1.9",
