--- a/webhook/package.json
+++ b/webhook/package.json
@@ -3,6 +3,7 @@
     "node": "12.x"
   },
   "scripts": {
+    "lint": "eslint main.ts",
     "dev": "sls offline start",
     "logs": "sls logs -t -f handler",
     "build": "sls package",
@@ -13,6 +14,10 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.40",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "prettier": "^1.19.1",
     "serverless": "^1.61.3",
     "serverless-offline": "^5.12.1",
