--- a/webhook/package.json
+++ b/webhook/package.json
@@ -3,7 +3,7 @@
     "node": "12.x"
   },
   "scripts": {
-    "lint": "prettier --check *.ts",
+    "lint": "eslint . --ext .ts",
     "dev": "sls offline start",
     "logs": "sls logs -t -f handler",
     "build": "sls package",
@@ -18,6 +18,7 @@
     "@typescript-eslint/parser": "^2.18.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
     "serverless": "^1.61.3",
     "serverless-offline": "^5.12.1",
