--- a/webhook/package.json
+++ b/webhook/package.json
@@ -10,6 +10,7 @@
     "deploy": "sls deploy -v"
   },
   "dependencies": {
+    "@slack/webhook": "^5.0.2",
     "crypto": "^1.0.1"
   },
   "devDependencies": {
