--- a/webhook/package.json
+++ b/webhook/package.json
@@ -14,14 +14,15 @@
     "crypto": "^1.0.1"
   },
   "devDependencies": {
+    "@slack/types": "^1.3.0",
     "@types/aws-lambda": "^8.10.40",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
-    "serverless": "^1.61.3",
+    "serverless": "^1.63.0",
     "serverless-offline": "^5.12.1",
     "serverless-plugin-typescript": "^1.1.9",
     "serverless-prune-plugin": "^1.4.1",
