--- a/webhook/package.json
+++ b/webhook/package.json
@@ -10,22 +10,21 @@
     "deploy": "sls deploy -v"
   },
   "dependencies": {
-    "@slack/webhook": "^5.0.2",
-    "crypto": "^1.0.1"
+    "@slack/webhook": "^5.0.2"
   },
   "devDependencies": {
     "@slack/types": "^1.3.0",
-    "@types/aws-lambda": "^8.10.40",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
+    "@types/aws-lambda": "^8.10.43",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
-    "serverless": "^1.63.0",
+    "serverless": "^1.64.0",
     "serverless-offline": "^5.12.1",
     "serverless-plugin-typescript": "^1.1.9",
-    "serverless-prune-plugin": "^1.4.1",
+    "serverless-prune-plugin": "^1.4.2",
     "typescript": "^3.7.5"
   },
   "author": "tatsuya",
