--- a/webhook/package.json
+++ b/webhook/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "0.1.0",
   "engines": {
     "node": "12.x"
   },
@@ -13,19 +14,19 @@
     "@slack/webhook": "^5.0.3"
   },
   "devDependencies": {
-    "@slack/types": "^1.7.0",
-    "@types/aws-lambda": "^8.10.56",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "eslint": "^7.2.0",
+    "@slack/types": "^1.8.0",
+    "@types/aws-lambda": "^8.10.61",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5",
-    "serverless": "^1.72.0",
-    "serverless-offline": "^6.4.0",
+    "serverless": "^1.79.0",
+    "serverless-offline": "^6.5.0",
     "serverless-plugin-typescript": "^1.1.9",
     "serverless-prune-plugin": "^1.4.3",
-    "typescript": "^3.9.5"
+    "typescript": "^4.0.2"
   },
   "author": "tatsuya",
   "license": "MIT"
